--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
    <link rel="stylesheet" href="./duck.css" />
 </head>
 <body>
-   <h3>Rubberduck2</h3>   
-   
+   <h1>Rubberduck2</h1>   
+   <dl>
+      <dt>Juhee Cheon</dt>
+      <dd>I am Rubberduck2 team member</dd>
+   </dl>
+   <dl>
+      <dt>Eunkyung Koh</dt>
+      <dd>I am Rubberduck2 team manager</dd>
+   </dl>
 </body>
 </html>
