--- a/index.html
+++ b/index.html
@@ -16,5 +16,8 @@
       <dt>Eunkyung Koh</dt>
       <dd>I am Rubberduck2 team manager</dd>
    </dl>
+    <footer>
+      <h3>Footer</h3>
+    </footer>
 </body>
 </html>
